docs/0.6.0/_sources/generated/skbio.stats.distance.DistanceMatrix.rst.txt

skbio.stats.distance.DistanceMatrix
===================================




   
      
   

   

   

   
      
   

   

   
      
   

   

   
      
   

   
      
   

   
      
   

   

   

   
      
   

   
      
   

   
      
   

   

   

   

   

   

   

   
      
   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   


.. currentmodule:: skbio.stats.distance

.. autoclass:: DistanceMatrix

   
   .. rubric:: Attributes

   .. autosummary::
   
      ~DistanceMatrix.T
      ~DistanceMatrix.data
      ~DistanceMatrix.default_write_format
      ~DistanceMatrix.dtype
      ~DistanceMatrix.ids
      ~DistanceMatrix.png
      ~DistanceMatrix.shape
      ~DistanceMatrix.size
      ~DistanceMatrix.svg
   

   
   .. rubric:: Built-ins

   .. autosummary::
      :toctree:
   
      ~DistanceMatrix.__contains__
      ~DistanceMatrix.__eq__
      ~DistanceMatrix.__ge__
      ~DistanceMatrix.__getitem__
      ~DistanceMatrix.__getstate__
      ~DistanceMatrix.__gt__
      ~DistanceMatrix.__le__
      ~DistanceMatrix.__lt__
      ~DistanceMatrix.__ne__
      ~DistanceMatrix.__str__
   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      
      
      ~DistanceMatrix.between
      
      
      ~DistanceMatrix.condensed_form
      
      
      ~DistanceMatrix.copy
      
      
      ~DistanceMatrix.filter
      
      
      ~DistanceMatrix.from_iterable
      
      
      ~DistanceMatrix.index
      
      
      ~DistanceMatrix.permute
      
      
      ~DistanceMatrix.plot
      
      
      ~DistanceMatrix.read
      
      
      ~DistanceMatrix.redundant_form
      
      
      ~DistanceMatrix.to_data_frame
      
      
      ~DistanceMatrix.to_series
      
      
      ~DistanceMatrix.transpose
      
      
      ~DistanceMatrix.within
      
      
      ~DistanceMatrix.write
      
   