docs/0.7.2/_sources/generated/skbio.stats.distance.DistanceMatrix.rst.txt

skbio.stats.distance.DistanceMatrix
===================================







   
      
   

   

   

   
      
   

   

   
      
   

   

   
      
   

   
      
   

   
      
   

   

   

   
      
   

   
      
   

   
      
   

   

   

   

   

   

   

   
      
   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   








   
      
   

   
      
   

   
      
   

   
      
   

   
      
   

   
      
   

   
      
   

   
      
   





   

   
      
         
      
   

   
      
         
      
   

   
      
         
      
   

   
      
         
      
   

   
      
         
      
   

   
      
         
      
   

   
      
         
      
   

   
      
         
      
   

   
      
         
      
   

   
      
         
      
   

   
      
         
      
   

   
      
         
      
   

   
      
         
      
   

   
      
         
      
   

   
      
         
      
   

   
      
         
      
   

   
      
         
      
   

   
      
         
      
   





   
      
   

   
      
   

   
      
   

   
      
   

   
      
   

   
      
   

   
      
   

   
      
   

   
      
   

   
      
   





.. currentmodule:: skbio.stats.distance

.. autoclass:: DistanceMatrix




   
   

   
   .. rubric:: Attributes (inherited)

   .. autoinherit::
   
      ~DistanceMatrix.T
      ~DistanceMatrix.data
      ~DistanceMatrix.default_write_format
      ~DistanceMatrix.diagonal
      ~DistanceMatrix.dtype
      ~DistanceMatrix.ids
      ~DistanceMatrix.shape
      ~DistanceMatrix.size
   
   

   
   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      ~DistanceMatrix.read
   
      ~DistanceMatrix.to_series
   
      ~DistanceMatrix.write
   
   

   
   .. rubric:: Methods (inherited)

   .. autoinherit::
      ~DistanceMatrix.as_condensed
      ~DistanceMatrix.as_redundant
      ~DistanceMatrix.between
      ~DistanceMatrix.condensed_form
      ~DistanceMatrix.copy
      ~DistanceMatrix.filter
      ~DistanceMatrix.from_iterable
      ~DistanceMatrix.index
      ~DistanceMatrix.permute
      ~DistanceMatrix.plot
      ~DistanceMatrix.redundant_form
      ~DistanceMatrix.rename
      ~DistanceMatrix.to_data_frame
      ~DistanceMatrix.transpose
      ~DistanceMatrix.within
   
   

   
   

   
   .. rubric:: Special methods (inherited)

   .. autoinherit::
   
      ~DistanceMatrix.__contains__
      ~DistanceMatrix.__eq__
      ~DistanceMatrix.__ge__
      ~DistanceMatrix.__getitem__
      ~DistanceMatrix.__getstate__
      ~DistanceMatrix.__gt__
      ~DistanceMatrix.__le__
      ~DistanceMatrix.__lt__
      ~DistanceMatrix.__ne__
      ~DistanceMatrix.__str__
   
   




   
   .. rubric:: Details

   

   
   